[fix] #66 getFirst()를 get(0)로 수정
sonarqube에서 jdk 21 이상의 문법인 getFrist()를 못 인지해서 수정